solved a bug with the navbar which was fixed behind the modal and changed text color in events

--- a/frontend/src/styles/assets.css
+++ b/frontend/src/styles/assets.css
@@ -42,3 +42,12 @@
   height: 4.7rem;
   border-radius: 8px;
 }
+
+.modal.show {
+  z-index: 100000!important;
+}
+
+.modal{
+  top: 50px;
+  
+}
